<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgFragmentBook"
                android:layout_width="match_parent"
                android:layout_height="430dp"
                android:contentDescription="Image Book"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtDetailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_book"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDetailAuthor"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/name_author"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtDetailAboutBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_book" />

            <TextView
                android:id="@+id/txtDetailPrice"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/price"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="italic"
                android:textColor="@color/pink" />

            <Button
                android:id="@+id/buttonDetailBuy"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="@color/pink"
                android:text="@string/add_cart"
                android:textColor="#616161" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/status_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>