<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBookImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:padding="5dp"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3">

            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/name_book"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBookName"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:text="@string/name_author"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtBookPrice"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_below="@+id/txtBookAuthor"
                android:layout_marginTop="6dp"
                android:padding="8dp"
                android:text="@string/price"
                android:textColor="@color/pink"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColorHighlight="@color/pink"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/count"
                android:layout_width="10dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/back_text"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>